test/type/fail/minus_wrong_first.j
class A{
  Void main() {
    Int a;
    a = (null) - 5;
    return;
  }
}
